--- a/index.html
+++ b/index.html
@@ -119,6 +119,10 @@
         </div>
         <div class="section">
             <h3>프로필</h3>
+             <div class="links">
+            <a href="https://brunch.co.kr/@9e22fe092fea4c7">Brunch Story</a>
+            <a href="https://www.instagram.com/dakgangjeong_official/?next=%2F">Instagram</a>
+        </div>
             <p>다양한 분야를 기반으로 사용자 중심 솔루션과 혁신적인 제품 관리를 통해 문제를 해결하는 데 열정을 가진 PM입니다.
 <p>**해외 유명 HR 전문가인 Regina Hartley는 성공한 사람들을 분석한 결과, “어린 시절이나 초기 단계에서 역경을 겪은 경험이 있다”는 공통점을 발견했습니다. 그녀는 이러한 사람들을 ‘Scraper’라고 부르며 기업이 이들을 고용해야 한다고 주장했습니다.**</p>
                 <p><a href="https://www.youtube.com/watch?v=jiDQDLnEXdA" target="_blank">YouTube에서 강연 보기</a></p>
@@ -159,7 +163,7 @@
             <h3>기술 역량</h3>
             <ul>
                 <li>Oh My App, Bubble.io (노코드 개발)</li>
-                <li>PIGMA (UI/UX 디자인)</li>
+                <li>FIGMA (UI/UX 디자인)</li>
                 <li>Miri Canvas, Canva (그래픽 디자인)</li>
                 <li>HTML/CSS (웹 개발)</li>
                 <li>Python (프로그래밍)</li>
